<resources>
    <string name="app_name">garbage_collection</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="enter_the_email_associated_with_your_account_and_we_ll_send_an_email_with_instructions_to_reset_your_password">Enter the email associated with your account and we\'ll send an email with instructions to reset your password</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="enter_correct_otp"><u>Enter correct OTP</u></string>
    <string name="an_4_digit_code_has_been_sent_to_91_8295035125">An 4 digit code has been sent to +91 8295035125</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_rewards_page">RewardsPageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="amount">amount</string>
</resources>