<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/workerImageCreatePage"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:background="#000"
        android:scaleType="centerCrop"
        android:src="@drawable/portrait_garbage_collector_truck_loading_260nw_1614244708_1"
        android:tint="@color/black_light_transparent"

        tools:ignore="UseAppTint" />

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"

        android:layout_marginTop="40dp"
        android:src="@drawable/company_logo"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/rubik_medium"
        android:text="Welcome back."

        android:textColor="#fff"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/rubik_regular"
        android:text="You have been missed!"
        android:textColor="#fff"
        android:textSize="30dp" />


    <LinearLayout
        android:id="@+id/createPageBox"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/round_corner_box"
        android:backgroundTint="#EAF8EA"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/rubik_bold"
            android:text="Log in"
            android:textColor="#333"
            android:textSize="35dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_style"
            android:backgroundTint="@color/white"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/email"
                android:paddingStart="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress" />

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/checkmark"
                app:icon="@drawable/checkmark_green"
                tools:ignore="ImageContrastCheck,ImageContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_style"
            android:backgroundTint="@color/white"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="295dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/password"
                android:paddingStart="10dp"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck,TextContrastCheck"
                android:inputType="textPassword"
                android:autofillHints="password"/>

            <ImageButton
                android:id="@+id/passwordIcon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/eye_outline_1"
                android:contentDescription="@string/app_name"
                app:icon="@drawable/checkmark_green" />

        </LinearLayout>


        <Button
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_style"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:text="Sign In"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="30sp"
            app:backgroundTint="#2CB530"
            ></Button>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_regular"
            android:text="Forget Password"
            android:textColor="#555" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_medium"
                android:text="Don't have an account?"
                android:textColor="#333"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/signUpButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/rubik_medium"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/theme_green"
                android:textSize="18sp"
                android:onClick="goNextPage"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>